--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 .video-container {
   position: absolute;
-  top: 0%;
-  left: 0%;
+  top: 0px;
+  left: 0px;
   height: 100%;
   width: 100%;
   overflow: hidden;
