--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  background-size: cover;
 
 }
 video {
@@ -15,6 +16,10 @@ video {
    opacity: 0.6;
    width: 100%;
    background-size: cover;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
 
 }
 
