--- a/css/custom.css
+++ b/css/custom.css
@@ -11,15 +11,18 @@
 }
 video {
 
-   position: absolute;
-   z-index: 0;
-   opacity: 0.6;
-   width: 100%;
-   background-size: cover;
+  position: fixed;
+   top: 50%;
+   left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
+   z-index: 0;
+   transform: translateX(-50%) translateY(-50%);
+   background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+   background-size: cover;
+   transition: 1s opacity;
 
 }
 
