--- a/css/custom.css
+++ b/css/custom.css
@@ -11,18 +11,11 @@
 }
 video {
 
-  position: fixed;
-   top: 50%;
-   left: 50%;
-   min-width: 100%;
-   min-height: 100%;
-   width: auto;
-   height: auto;
+   position: absolute;
    z-index: 0;
-   transform: translateX(-50%) translateY(-50%);
-   background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+   opacity: 0.6;
+   width: 100%;
    background-size: cover;
-   transition: 1s opacity;
 
 }
 
