--- a/css/custom.css
+++ b/css/custom.css
@@ -1,21 +1,26 @@
 .video-container {
   position: absolute;
   top: 0px;
-  left: 0px;
   bottom: 0px;
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-size: cover;
+
 
 }
 video {
 
    position: absolute;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
    z-index: 0;
-   opacity: 0.6;
-   width: 100%;
-   background-size: cover;
+   opacity: 1;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+
 
 }
 
@@ -113,4 +118,30 @@ header.masthead .post-heading .meta a {
 }
  section {
    background-color: #fffffff;
+ }
+
+ .btn {
+   font-size: 14px;
+   font-weight: 800;
+   padding: 15px 25px;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+   border-radius: 0;
+   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+ }
+
+ .btn-primary {
+   background-color: #0085A1;
+   border-color: #0085A1;
+ }
+
+ .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+   color: #fff;
+   background-color: #00657b !important;
+   border-color: #00657b !important;
+ }
+
+ .btn-lg {
+   font-size: 16px;
+   padding: 25px 35px;
  }
