--- a/css/copy.css
+++ b/css/copy.css
@@ -159,5 +159,43 @@ header.masthead .post-heading .meta a {
 }
 
 body {
-  
+
+}
+
+table, th, td {
+    padding: 6px 12px;
+    border: 1px solid #fff;
+    background-color: #ffb700;
+
+}
+
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+.tab button.active {
+    background-color: #ccc;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
