--- a/css/copy.css
+++ b/css/copy.css
@@ -167,7 +167,7 @@ body {
 table, th, td {
     padding: 6px 12px;
     border: 1px solid #fff;
-    background-color: #ffb700;
+    background-color: #eeeeee;
 
 }
 
